Closed
Bug 1056427
Opened 11 years ago
Closed 11 years ago
Stop PRenderFrame from managing PLayerTransaction
Categories
(Core :: Graphics: Layers, defect)
Tracking
()
RESOLVED
FIXED
mozilla34
People
(Reporter: mattwoodrow, Assigned: mattwoodrow)
References
Details
Attachments
(1 file, 2 obsolete files)
59.76 KB,
patch
|
roc
:
review+
|
Details | Diff | Splinter Review |
This is legacy code from before we had a compositor thread.
There's a lot of dead code in here, and I think we can get rid of most of it.
Assignee | ||
Comment 1•11 years ago
|
||
Assignee | ||
Comment 2•11 years ago
|
||
There's probably a lot more we can do, but this is a good start.
Assignee: nobody → matt.woodrow
Assignee | ||
Comment 3•11 years ago
|
||
Fixed the assertion, trying again: https://tbpl.mozilla.org/?tree=Try&rev=69805cf865e4
Assignee | ||
Updated•11 years ago
|
Attachment #8476383 -
Flags: review?(roc)
Comment on attachment 8476383 [details] [diff] [review]
Remove PLayerTransaction from PRenderFrame
Review of attachment 8476383 [details] [diff] [review]:
-----------------------------------------------------------------
Wow!
Please file a followup bug (or bugs) for any more stuff you know can be removed.
Attachment #8476383 -
Flags: review?(roc) → review+
Assignee | ||
Comment 5•11 years ago
|
||
Unfortunately the previous version didn't work, the tests just hang. I couldn't really be bothered spending too much time debugging it, so instead I've just made us create the compositor thread unconditionally so we can always take those code paths.
This shouldn't be much overhead, and we'll be wanting it everywhere soon enough anyway.
Attachment #8476383 -
Attachment is obsolete: true
Attachment #8476552 -
Flags: review?(roc)
Assignee | ||
Comment 6•11 years ago
|
||
Assignee | ||
Comment 7•11 years ago
|
||
And removed the pref change that wasn't meant to be there
Attachment #8476552 -
Attachment is obsolete: true
Attachment #8476552 -
Flags: review?(roc)
Attachment #8476555 -
Flags: review?(roc)
Comment on attachment 8476555 [details] [diff] [review]
Remove PLayerTransaction from PRenderFrame v3
Review of attachment 8476555 [details] [diff] [review]:
-----------------------------------------------------------------
::: gfx/layers/client/ClientLayerManager.cpp
@@ +510,4 @@
> } else if (HasShadowManager()) {
> NS_WARNING("failed to forward Layers transaction");
> }
> +
trailing whitespace
Attachment #8476555 -
Flags: review?(roc) → review+
Assignee | ||
Comment 9•11 years ago
|
||
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla34
You need to log in
before you can comment on or make changes to this bug.
Description
•